@@ -16,11 +16,17 @@
 package org.dblue.application.module.messagetemplate.application.dto;
 
 import io.swagger.v3.oas.annotations.media.Schema;
+import jakarta.validation.Valid;
+import jakarta.validation.constraints.NotBlank;
 import lombok.Data;
 import org.apache.commons.collections4.CollectionUtils;
 import org.dblue.application.module.messagetemplate.infrastructure.entity.MessageTemplate;
+import org.dblue.application.module.messagetemplate.infrastructure.entity.MessageTemplateAction;
+import org.dblue.application.module.messagetemplate.infrastructure.entity.MessageTemplateDirectRoute;
+import org.dblue.application.module.messagetemplate.infrastructure.entity.MessageTemplateTag;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * 消息模板基础DTO
@@ -35,12 +41,14 @@ public class BaseMessageTemplateDto {
     /**
      * 消息模板编码
      */
+    @NotBlank(message = "消息模板编码不能为空")
     @Schema(description = "消息模板编码")
     private String messageTemplateCode;
 
     /**
      * 消息模板名称
      */
+    @NotBlank(message = "消息模板名称不能为空")
     @Schema(description = "消息模板名称")
     private String messageTemplateName;
 
@@ -53,30 +61,35 @@ public class BaseMessageTemplateDto {
     /**
      * 消息标题配置
      */
+    @NotBlank(message = "消息标题不能为空")
     @Schema(description = "消息标题配置")
     private String messageTitleTpl;
 
     /**
      * 消息内容配置
      */
+    @NotBlank(message = "消息内容不能为空")
     @Schema(description = "消息内容配置")
     private String messageContentTpl;
 
     /**
      * 直接路由配置
      */
+    @Valid
     @Schema(description = "直接路由配置")
     private List<MessageTemplateDirectRouteDto> directRouters;
 
     /**
      * 条件标签配置
      */
+    @Valid
     @Schema(description = "条件标签配置")
     private List<MessageTemplateTagDto> tags;
 
     /**
      * 操作配置
      */
+    @Valid
     @Schema(description = "操作配置")
     private List<MessageTemplateActionDto> actions;
 
@@ -89,22 +102,26 @@ public class BaseMessageTemplateDto {
     }
 
     protected void setRelationship(MessageTemplate messageTemplate) {
+        // 这里不能直接 .toList()，JPA会报错。
         if (CollectionUtils.isNotEmpty(this.getDirectRouters())) {
-            messageTemplate.setRoutes(
-                    this.getDirectRouters().stream().map(MessageTemplateDirectRouteDto::asEntity).toList()
-            );
+            List<MessageTemplateDirectRoute> newRoutes = this.getDirectRouters().stream()
+                    .map(routeDto -> routeDto.asEntity(messageTemplate.getMessageTemplateId()))
+                    .collect(Collectors.toList());
+            messageTemplate.addRouters(newRoutes);
         }
 
         if (CollectionUtils.isNotEmpty(this.getTags())) {
-            messageTemplate.setTags(
-                    this.getTags().stream().map(MessageTemplateTagDto::asEntity).toList()
-            );
+            List<MessageTemplateTag> newTags = this.getTags().stream()
+                    .map(tagDto -> tagDto.asEntity(messageTemplate.getMessageTemplateId()))
+                    .collect(Collectors.toList());
+            messageTemplate.addTags(newTags);
         }
 
         if (CollectionUtils.isNotEmpty(this.getActions())) {
-            messageTemplate.setActions(
-                    this.getActions().stream().map(MessageTemplateActionDto::asEntity).toList()
-            );
+            List<MessageTemplateAction> newActions = this.getActions().stream()
+                    .map(actionDto -> actionDto.asEntity(messageTemplate.getMessageTemplateId()))
+                    .collect(Collectors.toList());
+            messageTemplate.addActions(newActions);
         }
     }
 }
